code25_all/scala/2732454.txt
scala> type Q = HashMap[Char, Q]
<console>:6: error: illegal cyclic reference involving type Q
       type Q = HashMap[Char, Q]
                          ^

HashMap[Char, Any]
HashMap[Char, Any]
import collections.mutable.HashMap

class LTree {
  val children = new HashMap[Char, LTree]
}

